Moves endpoint handlers to controllers. Adds update and edit buttons to the post details view. Creates update and delete endpoints. Installs and enables method-override.

--- a/views/post.ejs
+++ b/views/post.ejs
@@ -26,6 +26,16 @@
           <p><%= post.detail %></p>
         </div>
       </div>
+      <div class=" row justify-content-end">
+        <div class="col-4">
+          <a href="/post/edit/<%= post._id %>" class="btn btn-primary">Update</a>
+          <a
+            href="/post/<%= post._id %>?_method=DELETE"
+            onclick="return confirm('Are you sure?')"
+            class="btn btn-danger"
+          >Delete</a>
+        </div>
+      </div>
     </div>
   </article>
 
